# LingCode

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md
.long-running/: config.json  state.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/converters/: Cargo.toml
crates/converters/src/: chinese_converter.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: candidate.rs  config.rs  error.rs  lib.rs  resource_loader.rs  schema_parser.rs  segment.rs  types.rs
crates/dict/: Cargo.toml
crates/dict/src/: lib.rs  rime_loader.rs  user_dict.rs
crates/double-pinyin/: Cargo.toml
crates/double-pinyin/src/: engine.rs  lib.rs  mappings.rs  schemas.rs
crates/double-pinyin/src/schemas/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/include/: lingcode.h
crates/ffi/src/: lib.rs
crates/pinyin/: Cargo.toml
crates/pinyin/src/: dict.rs  lib.rs  matcher.rs  simplified.rs  traditional.rs
docs/: QUICKSTART.md  RESOURCES.md  SETUP.md
frontends/desktop/linux/: Cargo.toml
frontends/desktop/linux/src/: lib.rs
frontends/desktop/macos/: Cargo.toml
frontends/desktop/macos/LingCodeIME/: Package.swift  install.sh
frontends/desktop/macos/LingCodeIME/.build/: build.db  debug.yaml  plugin-tools.yaml
frontends/desktop/macos/LingCodeIME/Sources/LingCodeIME/: CandidatesWindow.swift  main.swift
frontends/desktop/macos/src/: lib.rs
frontends/desktop/windows/: Cargo.toml
frontends/desktop/windows/src/: lib.rs
frontends/mobile/android/: Cargo.toml
frontends/mobile/android/src/: lib.rs
frontends/mobile/ios/src/: lib.rs
resources/: README.md
tools/: download_resources.sh
