[package]
name = "lingcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
lazy_static.workspace = true

[lib]
name = "lingcode_core"
path = "src/lib.rs"