[package]
name = "lingcode-dict"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lingcode-core = { path = "../core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "lingcode_dict"
path = "src/lib.rs"
