[package]
name = "lingcode-double-pinyin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lingcode-core = { path = "../core" }
lingcode-pinyin = { path = "../pinyin" }
serde = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "lingcode_double_pinyin"
path = "src/lib.rs"