[package]
name = "lingcode-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lingcode-core = { path = "../core" }
lingcode-pinyin = { path = "../pinyin" }
double-pinyin = { path = "../double-pinyin" }
dict = { path = "../dict" }
converters = { path = "../converters" }
ffi = { path = "../ffi" }

[lib]
name = "lingcode_engine"
path = "src/lib.rs"