[package]
name = "lingcode-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lingcode_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
lingcode-pinyin = { path = "../pinyin" }
lingcode-dict = { path = "../dict" }
lingcode-double-pinyin = { path = "../double-pinyin" }
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"