[package]
name = "lingcode-pinyin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lingcode-core = { path = "../core" }
serde.workspace = true
serde_yaml.workspace = true
log.workspace = true
lazy_static.workspace = true
thiserror.workspace = true

[lib]
name = "lingcode_pinyin"
path = "src/lib.rs"