[package]
name = "lingcode-pinyin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lingcode-core = { path = "../core" }
lingcode-dict = { path = "../dict" }
serde.workspace = true
serde_yaml.workspace = true
log.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[lib]
name = "lingcode_pinyin"
path = "src/lib.rs"